--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -6,7 +6,11 @@
 
 body {
   min-height: 100vh;
+}
+
+html{
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-size: 20px;
 }
 
 
@@ -19,5 +23,5 @@ body {
   --danger-color: #ff5964;
 
   /* sizes */
-  --header-height: 50px;
+  --header-height: 70px;
 }
