se agrupo en un componenete el input y las teclas para conjuntos

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -20,6 +20,7 @@ html{
   --secondary-color: #e6e6e9;
   --tertiary-color: #9999a1;
   --positive-color: #35a7ff;
+  --positive-color: #35ff35;
   --danger-color: #ff5964;
 
   /* sizes */
